// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography > Body renders correctly 1`] = `
<div>
  <p
    class="sc-dmqHEX kWFPzJ"
  >
    Body
  </p>
</div>
`;

exports[`Typography > H1 renders correctly 1`] = `
<div>
  <h1
    class="sc-beqWaB fFhbVn"
  >
    Heading 1
  </h1>
</div>
`;

exports[`Typography > Subtitle renders correctly 1`] = `
<div>
  <p
    class="sc-gueYoa gEQEOZ"
  >
    Subtitle
  </p>
</div>
`;
